[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantolib"
version = "0.0.0"
description = "Lightweight Python library for quantitative research and trading utilities"
license = "MIT"
authors = [
    { name = "Jacopo Michelacci" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.2",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
